--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ console.log('javascript')
 <header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
     <div class="mx-auto text-center mb-8 lg:mb-16">
         <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
-            Welcome to MYSPACE
+            Welcome to JOELAND
         </h2>
         <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
             A place where you can be yourself and express your thoughts and feelings.
@@ -14,7 +14,7 @@ console.log('javascript')
     </div>
 
     <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row">
-        <HeaderButton link="/">
+        <HeaderButton href="/">
             <svg
                 slot="before" 
                 xmlns="http://www.w3.org/2000/svg"
